services/api/overlays/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladesa-ro-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ladesa-ro-api
          # image: "registry.ladesa.com.br/api:production"
          image: "traefik/whoami"
