services/api/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladesa-ro-api-ingress
spec:
  rules:
    - host: "ing.kluster.local"
      http:
        paths:
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: ladesa-ro-api
                port:
                  name: web
